syntax = "proto3";

import "memory_message.proto";

//Go导入路径是在.proto文件中本地指定的，方法是go_package使用Go包的完整导入路径声明一个选项
option go_package = "./grpcbook";

message CPU{
    string brand = 1;
    string name = 2;
    uint32 number_cors = 3;
    uint32 number_threads =4;
    double min_ghz = 5;
    double max_ghz = 6;
}


message GPU{
    string brand=1;
    string name =2;
    double min_ghz = 3;
    double max_ghz = 4;
    Memory memory=5;
}

